--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -34,4 +34,4 @@
     }
 </table>
     <p>@Html.ActionLink("Create new item", "Create")</p>
-    <p>@Html.ActionLink("Create new category", "Create")</p>
+    <p>@Html.ActionLink("Create new category", "Index", "Category")</p>
