Add Basic Formatting and style

--- a/ToDoList/Views/Category/Index.cshtml
+++ b/ToDoList/Views/Category/Index.cshtml
@@ -29,4 +29,5 @@
         </tr>
     }
 </table>
- <p>@Html.ActionLink("Create new category", "Create", "Category")</p>
+ @Html.ActionLink("Create new category", "Create", "Category") |
+ @Html.ActionLink("Back To Task list", "Index", "Items")
