--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -33,5 +33,5 @@
         </tr>
     }
 </table>
-    <p>@Html.ActionLink("Create new item", "Create")</p>
-    <p>@Html.ActionLink("Create new category", "Index", "Category")</p>
+    @Html.ActionLink("Create new item", "Create") |
+    @Html.ActionLink("Categories List", "Index", "Category")
