--- a/ToDoList/Views/Category/Details.cshtml
+++ b/ToDoList/Views/Category/Details.cshtml
@@ -1,13 +1,9 @@
 ﻿@model ToDoList.Models.Category
 
 @{
-    ViewData["Title"] = "Item - Details";
+    ViewData["Title"] = "Category - Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>Item Details</h2>
 <hr />
 
-<p>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Description)</p>
-<p>@Html.DisplayNameFor(model => model.CategoryId) : @Html.DisplayFor(model => model.CategoryId)</p>
-
-<p>@Html.ActionLink("Edit", "Edit", new { id = Model.CategoryID }) | @Html.ActionLink("Back to List", "Index")</p>
