--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -3,22 +3,33 @@
     ViewData["Title"] = "Item";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 <h2>To Do List</h2>
 <hr />
 <table class="table">
     <tr>
+         <th>
+            Checkoff
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Description)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Category)
         </th>
+        
         <th></th>
     </tr>
 
     @foreach (var listItem in Model)
-    {
+    {  
+
         <tr>
+             <td>
+                <input type="checkbox" value="done"><br>
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => listItem.Description)
             </td>
@@ -30,8 +41,13 @@
                 @Html.ActionLink("Details", "Details", new { id = listItem.ItemId }) |
                 @Html.ActionLink("Delete", "Delete", new { id = listItem.ItemId })
             </td>
+        
+  
         </tr>
+
     }
 </table>
     @Html.ActionLink("Create new item", "Create") |
     @Html.ActionLink("Categories List", "Index", "Category")
+
+
